# vergent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  client.py  pyproject.toml  vergent.yaml
.github/: COPILOT.md  copilot-instructions.md
.github/agents/: README.md  architect.agent.md  backend.agent.md  coordinator.agent.md  devops.agent.md  frontend.agent.md  invariant-auditor.agent.md  proposal-implementer.agent.md  reviewer.agent.md  test-writer.agent.md  tester.agent.md
.github/prompts/: add-port-adapter.prompt.md  implement-proposal.prompt.md  kv-operation.prompt.md  new-cli-command.prompt.md  new-envelope-handler.prompt.md  objective.prompt.md  plan-tourillon.prompt.md  ring-operations.prompt.md  write-tests.prompt.md
.github/workflows/: ci.yml
docs/: architecture-ring-2b.md  architecture.md  convergence.md  index.md  known-issues-and-todos.md  membership.md  operations.md  protocol.md  rebalance.md  ring.md  roadmap.md  scalability.md  security.md  testing.md
docs/lifecycle/: node-drain.md  node-join.md  node-restart.md  node-startup.md
proposals/: proposal-TEMPLATE-MMDDYYYY-SEQ.md  proposal-bootstrap-05022026-001.md  proposal-gossip-seeded-join-05102026-004.md  proposal-kv-05162026-006.md  proposal-kv-dataplane-05022026-006.md  proposal-node-inspect-05102026-003.md  proposal-node-join-05022026-002.md  proposal-node-leave-05022026-004.md  proposal-node-lifecycle-05022026-003.md  proposal-pause-05022026-005.md  proposal-rebalance-11052026-005.md  proposal-ring-first-node-08022026-002.md
scripts/: check_license_header.py
tests/: conftest.py  test_bootstrap.py  test_smoke.py
tests/bootstrap/: __init__.py  test_config.py  test_contexts.py  test_lock_and_server.py  test_node.py
tests/cli/: __init__.py  test_config.py  test_error.py  test_node.py  test_output.py  test_pki.py  test_runner.py
tests/core/: __init__.py  test_config.py  test_dispatch.py
tests/core/gossip/: __init__.py  test_bootstrapper.py  test_engine.py  test_startup_phase.py
tests/core/handlers/: __init__.py  test_gossip.py  test_handoff_handlers.py  test_inspect.py  test_kv_handlers.py  test_node_join.py  test_replication_handlers.py
tests/core/lifecycle/: test_bootstrap.py  test_checks.py  test_probe.py  test_registry.py
tests/core/net/: __init__.py
tests/core/ports/: __init__.py  test_replication_port.py
tests/core/rebalance/: mem_storage.py  test_applicator.py  test_digest.py  test_handlers.py  test_planner.py  test_rebalance_command.py  test_storage.py
tests/core/ring/: __init__.py  test_hashspace.py  test_partitioner.py  test_placement.py  test_ring.py  test_strategy.py  test_topology.py  test_vnode.py
tests/core/structure/: __init__.py  test_clock.py  test_envelope.py  test_handoff_hint.py  test_handoff_queue.py  test_membership.py  test_replica_coordinator.py  test_replication_values.py  test_version.py  test_waitgroup.py
tests/core/transport/: __init__.py  test_pool.py
tests/e2e/: __init__.py  test_bootstrap_e2e.py  test_cli_roundtrip.py  test_gossip_join_e2e.py  test_idle_rebalance_status_e2e.py  test_inspect_e2e.py  test_kv_roundtrip.py  test_rebalance_e2e.py
tests/infra/: __init__.py  test_cli.py  test_file_state.py  test_node_wiring.py  test_pki_and_contexts.py  test_tls.py
tests/infra/memory/: __init__.py  test_handoff.py  test_log.py  test_store.py
tests/infra/msgpack/: __init__.py  test_serializer.py
tests/infra/transport/: __init__.py  test_transport.py
tests/tourctl/bootstrap/: test_deps.py  test_main.py
tests/tourctl/core/: test_client.py
tests/ut/: test_space.py
tourctl/: __init__.py  __main__.py
tourctl/bootstrap/: __init__.py  deps.py  main.py
tourctl/bootstrap/commands/: __init__.py  config.py  kv.py
tourctl/core/: __init__.py  client.py
tourctl/core/commands/: __init__.py  config.py  inspect.py  node_join.py  rebalance.py
tourctl/core/ports/: __init__.py  console.py
tourctl/core/structure/: __init__.py  contexts.py
tourctl/infra/: __init__.py
tourctl/infra/cli/: __init__.py  node.py  rebalance.py
tourillon/: __init__.py  __main__.py
tourillon/bootstrap/: __init__.py  config.py  container.py  contexts.py  handlers.py  lock.py  main.py  node.py  pki.py
tourillon/core/: __init__.py  config.py  dispatch.py
tourillon/core/gossip/: __init__.py  bootstrapper.py  config.py  digest.py  engine.py
tourillon/core/handlers/: __init__.py  gossip.py  handoff.py  inspect.py  node_join.py  rebalance.py  replication.py
tourillon/core/lifecycle/: bootstrap.py  checks.py  member.py  phi.py  probe.py  state.py
tourillon/core/net/: __init__.py
tourillon/core/ports/: __init__.py  handoff.py  log.py  pki.py  replication.py  serializer.py  state.py  storage.py  transport.py
tourillon/core/rebalance/: __init__.py  applicator.py  digest.py  plan.py  planner.py
tourillon/core/ring/: __init__.py  hashspace.py  partitioner.py  ring.py  strategy.py  topology.py  vnode.py
tourillon/core/structure/: __init__.py  clock.py  config.py  contexts.py  envelope.py  handoff.py  inspect.py  membership.py  record.py  replication.py  version.py  waitgroup.py
tourillon/core/testing/: __init__.py  mem_storage.py
tourillon/core/transport/: __init__.py  client.py  dispatcher.py  framing.py  pool.py  server.py
tourillon/infra/: __init__.py  contexts.py
tourillon/infra/cli/: __init__.py  config.py  error.py  main.py  node.py  output.py  runner.py
tourillon/infra/memory/: __init__.py  handoff.py  log.py  store.py
vergent/: __init__.py  __main__.py  requirements.txt
vergent/bootstrap/: builder.py  deps.py  main.py  pkg.py  routes.py
vergent/core/: app.py  bootstrapper.py  bucket.py  config.py  coordinator.py  deprecated_coordinator.py  exception.py  facade.py  flow.py  gossip.py  lifecycle.py  manager.py  peering.py  placement.py  protocol.py  replication.py  ring.py  router.py  server.py  space.py  storage.py  sub.py  types_.py
vergent/infra/: local_storage.py  msgpack_serializer.py  nodemeta_store.py
vergentctl/: __main__.py  admin.py  cli.py  commands.py  main.py  parser.py  repl.py  requirements.txt  rpc.py  ssl.py
(+54 files in other folders)
