[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[project]
name = "tourillon"
version = "0.1.0"
description = "Leaderless peer-to-peer distributed key-value database."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
dependencies = [
  "msgpack>=1.1",
  "rich>=13",
  "tomli-w>=1.1",
  "typer>=0.12",
  "cryptography==46.0.3",
]

[project.scripts]
tourillon = "tourillon.infra.cli.main:app"
tourctl = "tourctl.bootstrap.main:app"

[project.optional-dependencies]
dev = [
  # formatting
  "black>=24",
  # linting / import sorting / upgrades
  "ruff>=0.9",
  # unused-import / variable removal
  "autoflake>=2",
  # git hooks framework
  "pre-commit>=4",
  # standard hook scripts (trailing-whitespace, end-of-file-fixer, check-yaml, check-toml)
  "pre-commit-hooks>=4.6",
  # testing
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  # CLI testing
  "click>=8",
  # complexity analysis
  "radon>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["tourillon", "tourctl"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py313"]   # closest target supported by black; 3.14 tracks 3.13 grammar

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/W = pycodestyle  F = pyflakes  I = isort  N = pep8-naming
# UP = pyupgrade     B = bugbear   SIM = simplify  C90 = mccabe complexity
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "C90"]
ignore = [
  "E501",   # line length enforced by black
  "B008",   # typer.Option() in argument defaults is the canonical Typer pattern
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["tourillon", "tourctl"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=tourillon --cov=tourctl --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
asyncio_mode = "auto"
markers = [
  "bootstrap: proposal 001 — bootstrap and provisioning",
  "ring: proposal 002 — consistent-hashing ring",
  "lifecycle: proposal 003 — node lifecycle FSM",
  "leave: proposal 004 — node leave / drain",
  "pause: proposal 005 — pause / resume",
  "kv: proposal 006 — KV data-plane",
  "e2e: end-to-end tests requiring real sockets",
]
